@@ -1,3 +1,12 @@
+2004-10-20  David Hyatt  <hyatt@apple.com>
+
+	Fix for 3790936, make the unicode-breaking on the layout tests match Panther.
+	
+        Reviewed by kocienda
+
+        * khtml/rendering/break_lines.cpp:
+        (khtml::isBreakable):
+
 2004-10-20  Darin Adler  <darin@apple.com>
 
         Reviewed by John.
